better handling of missing data
Former-commit-id: e20a13d7398ab19cbcd7c217a54b7191616e8ab8 [formerly aab2c5be51f38488669ce720c44ccae0df792627]
Former-commit-id: 310b8a89cd8144970de09867bd1498812dea4667

--- a/tools/teth.html
+++ b/tools/teth.html
@@ -359,6 +359,10 @@ function calc(){
 		document.getElementById("releases").removeChild(document.getElementById("releases").lastChild);
 	};
 	for(var i=0;i<targets.length;i++){
+		if(Number.isNaN(targets[i].vinf)){
+			targets.splice(i,1);
+			continue;
+		};
 		targets[i].location = findRadiusFromVinf(targets[i].vinf,tether.angularVelocity);
 		var item = document.createElement("p");
 		item.innerHTML = targets[i].name.capitalize();
