--- a/tools/teth.html
+++ b/tools/teth.html
@@ -76,7 +76,7 @@ String.prototype.capitalize = function(){
 (function(){//planets.js has lots of data, why not make all possible systems available?
 	var availableSystems = [];
 		//we on
-	for(var planet in planets){//all keys, not only bodies
+	for(var planet in planets){//all keys, not only bodies, beware
 		if(planets[planet].hasOwnProperty("orbit") && planets[planet].orbit.hasOwnProperty("semiMajor")){//only those with orbital data
 			if(planets[planet].hasOwnProperty("radius")){
 				if(!planets[planet].hasOwnProperty("gm")){
@@ -87,10 +87,14 @@ String.prototype.capitalize = function(){
 						continue;
 					};
 				};
+				if(!planets[planet].orbit.hasOwnProperty("speed") && planets[planet].orbit.hasOwnProperty("parent")){
+					planets[planet].orbit.speed = Math.sqrt(planets[planets[planet].orbit.parent].gm/planets[planet].orbit.semiMajor);
+				};
 				availableSystems.push(planet);
 			};
 		};
 	};
+	availableSystems.push("sun");//fails some of the data checks, but that's fine
 	availableSystems.sort();
 	//maka a <select> list out of all the systems
 	var systemSelector = document.getElementsByName("system")[0];
@@ -360,7 +364,7 @@ function calc(){
 	};
 	for(var i=0;i<targets.length;i++){
 		if(Number.isNaN(targets[i].vinf)){
-			targets.splice(i,1);
+			alert(targets.splice(i--,1).name);
 			continue;
 		};
 		targets[i].location = findRadiusFromVinf(targets[i].vinf,tether.angularVelocity);
