timeline phase 2 cont
Former-commit-id: 3f2bb3d06458761a0d6ffb252770cc0b90c44243

--- a/timeline.html
+++ b/timeline.html
@@ -10,6 +10,7 @@ intro: What matters is understanding what <i>needs</i> to happen, and what <i>ca
 {% include_relative _includes/timeline/ph1-ships.html%}
 {% include_relative _includes/timeline/ph1-robots.html%}
 {% include_relative _includes/timeline/ph1-ISA.html %}
+{% include_relative _includes/timeline/ph1-summary.html %}
 {% include_relative _includes/timeline/ph2-skyhooks.html %}
 {% include_relative _includes/timeline/ph2-longHab.html %}
 {% include_relative _includes/timeline/ph2-RP-begins.html %}
