timeline phase 3 begun
Former-commit-id: 658bb2a3efb014adfe22a4eeeff83215b5982897

--- a/timeline.html
+++ b/timeline.html
@@ -14,7 +14,12 @@ intro: What matters is understanding what <i>needs</i> to happen, and what <i>ca
 {% include_relative _includes/timeline/ph2-skyhooks.html %}
 {% include_relative _includes/timeline/ph2-longHab.html %}
 {% include_relative _includes/timeline/ph2-RP-begins.html %}
+{% include_relative _includes/timeline/ph2-summary.html %}
 {% include_relative _includes/timeline/residenceProgramChart.html %}
+{% include_relative _includes/timeline/ph3-trans.html %}
+{% include_relative _includes/timeline/ph3-dev.html %}
+{% include_relative _includes/timeline/ph3-soceco.html %}
+{% include_relative _includes/timeline/ph3-summary.html %}
 {% include_relative _includes/timeline/inukshukRP1.html %}
 {% include_relative _includes/timeline/3baseRP2-4.html %}
 {% include_relative _includes/timeline/RPround5.html %}
