--- a/tools/teth.html
+++ b/tools/teth.html
@@ -15,7 +15,8 @@ title: Tethers
 						<option value="aramid">Aramid (3.62 GPa, 1.44 g/cm<sup>3</sup>)</option>
 						<option value="hppe">HPPE (2.4 GPa, 0.97 g/cm<sup>3</sup>)</option>
 						<option value="steel">Steel (2.62 GPa, 8 g/cm<sup>3</sup>)</option>
-						<option value="mwcnt">Future Carbon Nanotubes (20 GPa, 1.8 g/cm<sup>3</sup>)</option>
+						<option value="mwcnt">Future Carbon Nanotube (30 GPa, 1.35 g/cm<sup>3</sup>)</option>
+						<option value="xxmwcnt">Super-Future Nanotube (100 GPa, 1.35 g/cm<sup>3</sup>)</option>
 					</select><br>
 					<input name="overrideMaterial" type="checkbox">Use custom material instead<br>
 					<input name="tensileStrength">Tensile strength (Pa)<br>
@@ -122,8 +123,8 @@ var tether = {//remember to also update the select list in the HTML
 		aramid:[3620000000,1440],
 		steel:[2617000000,8000],
 		hppe:[2400000000,970],
-		mwcnt: [40000000000,1800],
-		xxmwcnt: [120000000000,1800]
+		mwcnt: [30000000000,1350],
+		xxmwcnt: [100000000000,1350]
 	}
 };
 function calc(){
