--- a/index.html
+++ b/index.html
@@ -48,30 +48,24 @@ image: "img/NewTESS-Stirlings.jpg"
 			<article class="innerDiv under-tabs tabcontent" id="intro">
 				<h1>Realistic Lunar Colony, Coming Online</h1>
 					<p>
-						This project is building a series of virtual colonies on the Moon. They will be
-						richly detailed and interactive presentations that are entirely
-						plausible, technically and scientifically.
-						They will examine all the questions, consider all the implications. When humanity
-						undertakes ventures on the scale of space settlement, it matters a great deal
+						This project is building a series of virtual colonies on the Moon and in the Earth-Moon system. We are building rich immersive environments that are entirely plausible, technically and scientifically. In them we'll examine all the questions, consider all the implications of space settlement. When humanity undertakes ventures on such a vast scale, it matters a great deal
 						how many people have given it real thought beforehand. These colonies serve
 						that purpose.
 					</p>
 					<p>
-						The first colony created will show a full town with a population of 20,000.
-						It will have developed industries and facilities, spacious beautiful architecture,
-						transport systems moving high volumes of people and cargo around the Moon and the solar system.
-						It shows what happens just beyond the tipping point, when technology enables a space boom.
-						To evaluate the importance of space exploration, this is the stage that must be understood.
+						The core colony, Cernan's Promise, shows a full town with a population of 25,000.
+						It has developed industries and facilities, spacious beautiful architecture,
+						and transport systems moving high volumes of people and cargo around the Moon and the solar system. It shows what happens just beyond the tipping point, when technology enables a space boom. To evaluate the importance of space exploration, this is the stage the public needs to understand.
 					</p>
 					<p>
 						The next two colonies work outwards from there... forwards to the city that
 						grows from the town, when technology allows a segmented glass dome to be placed over
-						a crater 22 km across, becoming home to a million people... and backwards to
+						a crater 23 km across, becoming home to a million people... and backwards to
 						the first missions that develop the basic techniques and infrastructure that
 						make it all possible.
 					</p>
 					<p>
-						These environments will be places to explore, create, collaborate, tell stories,
+						These environments are places to explore, create, collaborate, tell stories, play,
 						and above all to learn and to contemplate our future. To that end, the project
 						assumes an ideal political environment, in which a broad alliance of countries
 						pursues lunar settlement with determination and vision, making the best
@@ -80,32 +74,22 @@ image: "img/NewTESS-Stirlings.jpg"
 						and the complete scope of such a vast endeavor.
 					</p>
 					<p>
-						The entire project will always be open source, free of copyright, and free of
-						charge. In this way, as long as it has a strong core
+						Moonwards will always be open source, free of copyright, and free of
+						charge to the public. In this way, as long as it has a strong core
 						framework, it has incredible potential for growth. Some virtual world project
 						along these lines is going to explode in the near future. The time is right.
 						Once a world is vivid enough, and provides the right tools, it will mushroom
-						as talented people see the potential and dive in. Never have there
-						existed ways for so very many people to collaborate so powerfully.
+						as talented people see the potential and dive in. Never before has there
+						existed a way for so very many people to collaborate so powerfully.
 						Moonwards can reach towards two final frontiers -
 						the one above our heads, and the one inside our heads. Let us see how powerful
 						vision can be.
 					</p>
 					<p>
-						All the project's files are on the <a href="https://github.com/briligg/moonwards">
-						GitHub repository of Moonwards</a>. It is at
-						an early stage. It will always be 'under construction', though - that's its
-						nature. You will see this revamped website filling out in the coming weeks,
-						and then get new content regularly as the project advances. The same
-						will happen to the repo, after that. You will see the models changing and new
-						models being added, animated, and supplemented with other media.
-						When the first, simple version of the virtual colony comes online, then we are
-						really rolling. If you are
-						inclined to take part, please use the contact
-						options shown on the <a href="project.html">Project</a> page, or email me.
+						All the project's files are on the <a href="https://github.com/briligg/moonwards"> GitHub repository of Moonwards</a>. It is at an early stage. It will always be 'under construction', though - that's its nature. You will see this website filling out and then get new content regularly as the project advances. You will see the models changing and new models being added, animated, and supplemented with other media. When the first, simple version of the virtual colony comes online, then we are really rolling. If you are inclined to take part, please use the contact options shown on the <a href="project.html">Project</a> page, or email me.
 					</p>
 					<p class="byline">
-						Jan. 11, 2017 by Kim -- kim@moonwards.com
+						Kim Holder -- kim@moonwards.com
 					</p>
 				</article>
 		</div>
