update power and transport
Former-commit-id: a1f7131eba6a6f2948b5024f08ef1ec3dde7986b

--- a/machines2.html
+++ b/machines2.html
@@ -12,8 +12,11 @@ intro: "These sections focus on the machines that come to the fore once you've b
 {% comment %}
 machines2.html
 	machinesPower.html
-		machinesPowerSolarThermal.html
-		machinesPowerNuclear.html
+		SolarThermal.html
+		Nuclear.html
+		SolarPV.html
+		SpaceSolar.html
+		flywheels.html
 	machinesMining.html
 		Minerals.html
 		Refining.html
