--- a/machinesTransport.html
+++ b/machinesTransport.html
@@ -1,21 +1,30 @@
+---
+layout: content
+title: Transport to the Moon and on it
+description: "Solar thermal power plants, nuclear reactors, solar power beamed from space, photovoltaic masts at the poles, and how flexible flywheels can store energy. Technologies that take advantage of the strong constant sun, lunar vacuum, and low gravity for greatly enhanced performance."
+headline: "Ships, Skyhooks, and Spaceports"
+intro: "From early on-orbit assembly to the skyhooks in the SITH (Skyhook Interplanetary Transport Hubs)"
+---
 <div class="container" id="transport">
 	<section>
 		<div class="outerDiv">
 			<div class="innerDiv">
-				<h1>Transport</h1>
 				<p>
  About 3/5 of the speed changes needed to get to the Moon have to be acquired just to get to orbit around Earth. So, unless you make that part cheap and reliable, getting to the Moon (or any place beyond Earth) is always going to be extremely expensive. Completely reusable rockets are absolutely necessary for settlement of space. If SpaceX had not already demonstrated that we are close to that day, this project would have little relevance. It's also generally agreed that fuel depots in orbit are necessary. This is addressed early in the timeline using water ice mined from the lunar north pole to provide liquid hydrogen and oxygen (hydrolox) fuel at a new space staion in low Earth orbit. Several investigators have contemplated such an architecture. The work of <a href="http://www.spudislunarresources.com/">Paul Spudis</a> and  <a href="https://denniswingo.wordpress.com/">Dennis Wingo</a> are fine examples. The ultimate dream is a space elevator that a car can simply climb up and reach space. We instead have chosen vertical skyhooks for this - giant cables that hang in orbit but don't reach the atmosphere. When everything is considered, they have advantages over a space elevator that make them the better option even once we have materials strong enough for an elevator.</p>
 <p>
 	After you get to Earth orbit, getting safely to the Moon's surface involves a speed change of around 6 km/s, which is 21,600 km/h or 13,400 mph. The last part of that involves braking from a speed of close to 2 km/s (4500 mph) to a speed close enough to zero when you reach the lunar surface for a safe landing. Transport in space is a really big deal.
 </p>
 <p>
-	The question of transport is where it is really striking how much our capabilities would change if we made a serious commitment. Mining ice for fuel depots and building skyhooks would be very expensive at the beginning, but they are cheap once traffic is high. The question is whether there is enough to do in space that traffic will indeed explode. The virtual colonies will demonstrate that there is.
+	The question of transport is where it is really striking how much our capabilities would change if we made a serious commitment. Mining ice for fuel depots and building skyhooks is very expensive at the beginning, but they are cheap once traffic is high. The question is whether there is enough to do in space that traffic will indeed explode. The virtual colonies will demonstrate that there is.
 </p>
 			</div>
 		</div>
 	</section>
 </div>
+<div class="container" id="nuclearShuttles">
 {% include_relative _includes/transport/transportNuclearShuttles.html %}
+</div>
+
 {% include_relative _includes/transport/transportIondrive.html %}
 {% include_relative _includes/transport/transportPodShip.html %}
 {% include_relative _includes/transport/transportTethers.html %}
