transport page content

--- a/machinesTransport.html
+++ b/machinesTransport.html
@@ -14,6 +14,8 @@ intro: "From early on-orbit assembly to the skyhooks in the SITH (Skyhook Interp
 <p>
 	After you get to Earth orbit, getting safely to the Moon's surface involves a speed change of around 6 km/s, which is 21,600 km/h or 13,400 mph. The last part of that involves braking from a speed of close to 2 km/s (4500 mph) to a speed close enough to zero when you reach the lunar surface for a safe landing. Transport in space is a really big deal.
 </p>
+<p>All the ships in this list are self-piloting and designed to work with no human crew, including docking and any emergency avoidance maneuvers that might be necessary. When they carry people, the people are accommodated in modules attached onto the ship for that purpose. In most cases, those modules are easily attached and removed, because most traffic is cargo or robotic missions and there is no reason to haul the extra mass of life support systems and radiation shielding if no people are aboard, it's a waste of fuel. Later in the timeline, some ships specialize in human transport and are are permanently fitted with living space for that.
+</p>
 <p>
 	The question of transport is where it is really striking how much our capabilities would change if we made a serious commitment. Mining ice for fuel depots and building skyhooks is very expensive at the beginning, but they are cheap once traffic is high. The question is whether there is enough to do in space that traffic will indeed explode. The virtual colonies will demonstrate that there is.
 </p>
