transport content additions

--- a/_rss/024.html
+++ b/_rss/024.html
@@ -1,7 +1,7 @@
 ---
-title: Revamped Power and Mining
-link: https://www.moonwards.com/machines2.html
+title: Revamped Power
+link: https://www.moonwards.com/machinesPower.html
 pubDate: Wed, 15 Nov 2017
 guid: 024
 ---
-Website overhaul continues. New stuff in Power: PV panels, beamed power, and flywheels. New in Mining: solar furnaces, solar thermal reactor, molten regolith electrolysis, glass production, and excavation. Existing sections have also been rewritten. Next up, Transport. A rewrite was necessary to make everything integrate with the new Timeline, but it has ended up going well beyond that too.
+<a href="https://www.moonwards.com/machinesMining.html">and Mining</a>. Website overhaul continues. New stuff in Power: PV panels, beamed power, and flywheels. New in Mining: solar furnaces, solar thermal reactor, molten regolith electrolysis, glass production, and excavation. Existing sections have also been rewritten. Next up, Transport. A rewrite was necessary to make everything integrate with the new Timeline, but it has ended up going well beyond that too.
